@@ -1,3 +1,10 @@
+   * Bug #745633: Values of maximum size are not stored
+   API inconsistency, max value length was tested for <= while max KEY
+   length was <.  So I picked that keys and values *LONGER* than the
+   specified max value are what is used, and added documentation and tests
+   to that effect.  The test for max value tested that length plus 4, so
+   I've changed that to be that value plus 1.
+
    * Bug #713488: Issues Invalid "delete" command.
    Protocol has changed so that the "delete" operation no longer takes a
    "time" argument.  It seems that some servers will refuse a "delete key
